massive rework of the frontend ui based on travis's designs added a bunch of css classes that are now used to color systems/connection groups, indicate if a node is locked, and indicate if a node is being hovered over added a json_safe method to the wormhole model that will be used to serve necessary wormhole specific info to the frontend about connections overhauled the "global constant" variables in the js - though, i still don't like this system of having a ton of global vars changed all references of ellipse to rect as ellipsis are no longer what system nodes are represented by. they are all now rectangles added a method to retrieve a system node's text that is used when drawing and updating nodes added methods to retrieve a connection square's text, a connection's life text, a connection's jump mass text, and a connection's total mass text added methods to make the map transformation code a lot easier to understand removed all the complicated curve transformation code that was originally being used during map transformations. rip in pieces. hail lord travis for the new simple system of horizontal systems connections connections now show a ton of info as per travis's design. connection creation and update code has been updated to properly handle the new ui moved some of the elements around in the html to closer match the new design's layout changed the map container div's id to be something simple to understand removed the image that was being used as the background of popup panels - this marks the end of using assets from the wh-space project by arcanist

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,8 +1,21 @@
+body {
+    background-color: #222222;
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+#create-page {
+    background-color: rgb(41, 128, 185);
+}
+
 #stash {
     display: none;
 }
 
-#systemsHolder {
+#map {
     position: relative;
 }
 
@@ -16,9 +29,56 @@
     position: absolute;
     padding: 5px 10px;
     font-size: 13px;
-    background-image: url('/static/images/whInfoBgr.png');
+    background-color: #7f8c8d;
 }
 
 table {
     font-size: 13px;
+}
+
+text {
+    fill: white;
+    cursor: default;
+}
+
+rect.high {
+    fill: #27ae60;
+    stroke: #27ae60;
+}
+
+rect.low {
+    fill: #e67e22;
+    stroke: #e67e22;
+}
+
+rect.null {
+    fill: #e74c3c;
+    stroke: #e74c3c;
+}
+
+rect.c1, rect.c2, rect.c3, rect.c4, rect.c5, rect.c6 {
+    fill: #9b59b6;
+    stroke: #9b59b6;
+}
+
+path.wormhole-connection {
+    stroke-dasharray: 4;
+}
+
+rect.system-connection, path {
+    fill: #7f8c8d;
+    stroke: #7f8c8d;
+}
+
+rect.hover {
+    stroke-width: 4;
+}
+
+rect {
+    fill: #4e4e4e;
+    stroke: #4e4e4e;
+}
+
+rect.locked {
+    opacity: 0.2;
 }
